minor fix of screen sharing and video recording
made screen sharing button invisible on mobile devices and added basic feature of video recording.
The video recording uses MediaRecorder instead of Twilio and it works only on chrome browser. I think it will be replaced with twilio api in coming version.

--- a/app/css/classroom_main.css
+++ b/app/css/classroom_main.css
@@ -396,6 +396,10 @@
     z-index: 2;
 }
 
+.recording {
+    color: red;
+}
+
 @media screen and (max-width: 468px) {
     .classroom-page-container {
         margin-top: 0px;
